@@ -109,6 +109,11 @@
 		                report nocall:report|nocall:context;
 		                text python: report.CookedBody(stx_level=2)">
 
+        <p class="documentDescription"
+           tal:content="report/Description"
+           tal:condition="report/displayDescription">
+            Description
+        </p>
         <div class="soer-keyMessage" 
 	    tal:condition="report/getKeyMessage">
             <h5>Key message</h5>
